# BrainFuck

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  brainfuck.excalidraw  generate_brainfuck_code.py
bfception/: .gitignore  CMakeLists.txt  Makefile  generate_brainfuck_code.py  generate_stage_2.py  run.sh  stage_1.cpp  stage_1_formatted.cpp  step_1_main.cpp  step_1_main_1.cpp  step_1_main_2.cpp
brainfuck/: brainfuck.cpp  brainfuck.h  main.cpp
brainfuck-c-transpiler/: CMakeLists.txt  brainfuck-c-transpiler.h  main.cpp
constexpr-brainfuck/: .gitignore  CMakeLists.txt  Makefile  main.cpp
